--- a/mingw-w64-gitg/PKGBUILD
+++ b/mingw-w64-gitg/PKGBUILD
@@ -30,11 +30,15 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
 license=("GPL2+")
 url="https://wiki.gnome.org/Apps/Gitg"
 install=${_realname}-${CARCH}.install
-source=(https://download.gnome.org/sources/${_realname}/${pkgver:0:4}/${_realname}-$pkgver.tar.xz)
-sha256sums=('ba6895f85c18748294075980a5e03e0936ad4e84534dbb0d8f9e29aa874ddeaf')
+source=(https://download.gnome.org/sources/${_realname}/${pkgver:0:4}/${_realname}-$pkgver.tar.xz
+        0001-Do-not-duplicate-the-fds.patch)
+sha256sums=('ba6895f85c18748294075980a5e03e0936ad4e84534dbb0d8f9e29aa874ddeaf'
+            'ed79bd2d7a17719ffde8feadfbdca0691ea863d68b181492f8f6087a14f1bae2')
 
 prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
+
+  patch -p1 -i ${srcdir}/0001-Do-not-duplicate-the-fds.patch
 
   #autopoint --force
   #AUTOPOINT='intltoolize --automake --copy' autoreconf -f -i
